<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="0dp"
        android:background="@drawable/actionbar_bg"
        android:orientation="vertical"
        android:clipChildren="false">
        <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="50dp"
	        android:layout_margin="0dp"
	        android:background="@drawable/actionbar_bg"
	        android:orientation="horizontal">
	        <ImageButton
	            android:id="@+id/imgbtn_left_arrow" 
	            android:layout_width="20dp"
	            android:layout_height="20dp"
	            android:layout_margin="10dp"
	            android:layout_gravity="left|center_vertical"
	            android:background="@drawable/left_arrow"/>
	        <LinearLayout 
	            android:layout_width="0dp"
	            android:layout_height="50dp"
	            android:layout_weight="1"
	            android:gravity="center">
	            <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="50dp"
	            android:gravity="center"
	            android:text="参数配置"
	            android:textSize="24sp"
	            android:textColor="#FFF"/>
	        </LinearLayout>
	        <ImageButton android:id="@+id/imgbtn_add_choice_type"
	            android:layout_width="20dp"
	            android:layout_height="20dp"
	            android:background="@drawable/add"
	            android:layout_marginRight="10dp"
	            android:layout_gravity="right|center_vertical"
	            android:visibility="invisible"/>
	     </LinearLayout>
	     <ImageView 
	         android:id="@+id/imgview_popupwindow"
	         android:layout_width="wrap_content"
	         android:layout_height="match_parent"
	         android:layout_gravity="right"
	         android:background="@drawable/popupwindow_select_conditon_bg"/>
    </LinearLayout>
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
    
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <!-- 参数配置 -->
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#828790"
        android:textColor="#fff"
        android:text="频率扫描参数设置"
        android:textSize="20sp"/>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:gravity="center_vertical"
	    android:layout_marginBottom="5dp"
	    android:layout_marginTop="5dp"
	    android:paddingLeft="5dp">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:text="@string/start_frq_tv"
	        android:paddingRight="10dp"
	        android:gravity="center_vertical"/>
	    <EditText 
	        android:id="@+id/start_frq"
	        android:layout_width="0dp"
	        android:layout_height="38dp"
	        android:layout_weight="1"
	        android:background="@drawable/bg"
	        android:layout_marginRight="5dp"
	        android:gravity="center|right"
	        android:paddingRight="15dp"
	        android:text="100"/>

	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.25"
	        android:text="@string/end_frq_unit" />

	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:gravity="center_vertical"
	    android:layout_marginBottom="5dp"
	    android:paddingLeft="5dp">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:text="@string/end_frq_tv"
	        android:paddingRight="10dp"
	        android:gravity="center_vertical"/>
	    <EditText 
	        android:id="@+id/end_frq"
	        android:layout_width="0dp"
	        android:layout_height="38dp"
	        android:layout_weight="1"
	        android:background="@drawable/bg"
	        android:layout_marginRight="5dp"
	        android:gravity="center|right"
	        android:paddingRight="15dp"
	        android:text="120"/>
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.25"
	        android:text="@string/start_frq_unit"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:gravity="center_vertical"
	    android:layout_marginBottom="5dp"
	    android:paddingLeft="5dp">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:text="@string/frq_interval_tv"
	        android:paddingRight="10dp"
	        android:gravity="center_vertical"/>
	    <EditText 
	        android:id="@+id/frq_interval"
	        android:layout_width="0dp"
	        android:layout_height="38dp"
	        android:layout_weight="1"
	        android:background="@drawable/bg"
	        android:layout_marginRight="5dp"
	        android:gravity="center|right"
	        android:paddingRight="15dp"
	        android:text="50"/>

	    <TextView
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.25"
	        android:text="@string/frq_interval_unit" />

	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:gravity="center_vertical"
	    android:layout_marginBottom="5dp"
	    android:paddingLeft="5dp">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:text="@string/frq_time_tv"
	        android:paddingRight="10dp"
	        android:gravity="center_vertical"/>
	    <EditText 
	        android:id="@+id/frq_time"
	        android:layout_width="0dp"
	        android:layout_height="38dp"
	        android:layout_weight="1"
	        android:background="@drawable/bg"
	        android:layout_marginRight="5dp"
	        android:gravity="center|right"
	        android:paddingRight="15dp"
	        android:text="2"/>
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.25"
	        android:text="@string/frq_time_unit"/>
	</LinearLayout>
	 <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#828790"
        android:textColor="#fff"
        android:text="最佳偏置点"
        android:textSize="20sp"/>
	 <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:gravity="center_vertical"
	    android:layout_marginBottom="5dp"
	    android:layout_marginTop="5dp"
	    android:paddingLeft="5dp">

	     <TextView
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:gravity="center_vertical"
	         android:paddingRight="10dp"
	         android:text="@string/dianping_tv"
	         android:textSize="20sp" />

	    <EditText 
	        android:id="@+id/dianping"
	        android:layout_width="0dp"
	        android:layout_height="38dp"
	        android:layout_weight="1"
	        android:background="@drawable/bg"
	        android:layout_marginRight="5dp"
	        android:gravity="center|right"
	        android:paddingRight="15dp"
	        android:text="640"/>
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.25"
	        android:text="@string/dianping_unit"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:gravity="center_vertical"
	    android:layout_marginBottom="5dp"
	    android:paddingLeft="5dp">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:text="@string/enlarge_tv"
	        android:paddingRight="10dp"
	        android:gravity="center_vertical"/>
	    <EditText 
	        android:id="@+id/enlarge"
	        android:layout_width="0dp"
	        android:layout_height="38dp"
	        android:layout_weight="1"
	        android:background="@drawable/bg"
	        android:layout_marginRight="5dp"
	        android:gravity="center|right"
	        android:paddingRight="15dp"
	        android:text="512"/>
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.25"
	        android:text="@string/enlarge_unit"/>
	</LinearLayout>
	<TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#828790"
        android:textColor="#fff"
        android:text="多次扫描设置"
        android:textSize="20sp"/>
	 <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:gravity="center_vertical"
	    android:layout_marginBottom="5dp"
	    android:layout_marginTop="5dp"
	    android:paddingLeft="5dp">

	     <TextView
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:gravity="center_vertical"
	         android:paddingRight="10dp"
	         android:text="@string/times_tv"
	         android:textSize="20sp" />

	    <EditText 
	        android:id="@+id/times"
	        android:layout_width="0dp"
	        android:layout_height="38dp"
	        android:layout_weight="1"
	        android:background="@drawable/bg"
	        android:layout_marginRight="5dp"
	        android:gravity="center|right"
	        android:paddingRight="15dp"
	        android:text="1024"/>
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.25"
	        android:text="@string/times_init"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:gravity="center_vertical"
	    android:layout_marginBottom="5dp"
	    android:paddingLeft="5dp">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:text="@string/interval_time_tv"
	        android:paddingRight="10dp"
	        android:gravity="center_vertical"/>
	    <EditText 
	        android:id="@+id/interval_time"
	        android:layout_width="0dp"
	        android:layout_height="38dp"
	        android:layout_weight="1"
	        android:background="@drawable/bg"
	        android:layout_marginRight="5dp"
	        android:gravity="center|right"
	        android:paddingRight="15dp"
	        android:text="5"/>
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.25"
	        android:text="@string/interval_time_unit"/>
	</LinearLayout>
	<!-- <View  android:layout_height="1px" 
           android:layout_width="match_parent"
           android:background="#66CCFF"/>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:gravity="center_vertical"
	    android:layout_marginBottom="5dp"
	    android:paddingLeft="5dp">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:text="@string/test_times_tv"
	        android:paddingRight="10dp"
	        android:gravity="center_vertical"/>
	    <EditText 
	        android:id="@+id/test_times"
	        android:layout_width="0dp"
	        android:layout_height="38dp"
	        android:layout_weight="1"
	        android:background="@drawable/bg"
	        android:layout_marginRight="5dp"
	        android:gravity="center|right"
	        android:paddingRight="15dp"
	        android:text="4"/>
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.25"
	        android:text="@string/times_init"/>
	</LinearLayout> -->
	<CheckBox
        android:id="@+id/cb_save_param"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:background="@null"
        android:checked="false"
        android:duplicateParentState="false"
        android:text="保存为默认值"
        android:textColor="#666666"
        android:textSize="15sp"/> 
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:gravity="center_horizontal"
	    android:layout_marginBottom="0dp">

	    <Button
	        android:id="@+id/btn_confirm_set"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:text="@string/confirm_set"
	        android:background="@drawable/bg"/>

	    <Button
	        android:id="@+id/btn_cancel_set"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:text="@string/cancel_set"
	        android:background="@drawable/bg"/>
	</LinearLayout>
       
    </LinearLayout>
</ScrollView> 
</LinearLayout>
